# Multi-Tenant-IAM-Service

./: .gitignore  Cargo.toml
iam-service/: Cargo.toml  Dockerfile  build.rs
iam-service/src/: lib.rs  main.rs
iam-service/src/config/: mod.rs
iam-service/src/db/: mod.rs
iam-service/src/entities/: mod.rs  tenants.rs  user_auth.rs  users.rs
iam-service/src/errors/: user_management.rs
iam-service/src/handlers/: mod.rs  tenant_management.rs
iam-service/src/models/: mod.rs  tenant_management.rs
iam-service/src/repositories/: mod.rs  tenant.rs
iam-service/src/routes/: mod.rs  user_management.rs
iam-service/src/services/: mod.rs  user_management.rs
migrations/: 20241115051629_iam-service-schema.up.sql
proto/: iam-service.proto
