[workspace]
members = ["api-gateway", "iam-service"]
resolver = "2"

[workspace.dependencies]
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"], default-features = false}
sqlx = { version = "0.8.2", features = ["macros", "runtime-tokio", "postgres", "uuid", "chrono"], default-features = false }
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = {version = "0.4.38", features = ["serde"]}
argon2 = "0.5.3"
prost = "0.13.3"
tonic = "0.12.3"
tonic-build = "0.12.3"
dotenvy = "0.15.7"
thiserror = "2.0.3"